# jupyter-databricks-session-kernel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RELEASING.md  mise.toml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  publish.yaml  release.yaml
docs/: README.md  architecture.md  constraints.md  roadmap.md  setup.md  usage.md  use-cases.md
src/jupyter_databricks_kernel/: __init__.py  config.py  executor.py  kernel.py  sync.py
tests/: conftest.py  test_config.py  test_executor.py  test_integration.py  test_kernel.py  test_sync.py
