[project]
name = "jupyter-databricks-kernel"
version = "0.1.0"
description = "A Jupyter kernel for complete remote execution on Databricks clusters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.30.0,<1.0.0",
    "ipykernel>=6.20.0",
    "jupyter-client>=8.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#minimal-configuration
max-line-length = 88
extend-exclude = [".venv"]
extend-ignore = [
    "E203",
    "E701",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
