[project]
name = "jupyter-databricks-kernel"
version = "0.1.0"
description = "A Jupyter kernel for complete remote execution on Databricks clusters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.30.0,<1.0.0",
    "ipykernel>=6.20.0",
    "jupyter-client>=8.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "ruff",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
]

[tool.ruff.lint.isort]
known-first-party = ["jupyter_databricks_kernel"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "ipykernel.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "jupyter_databricks_kernel.kernel"
disallow_untyped_calls = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
